# NCursesConnectN

./: CMakeLists.txt  board.c  board.h  checkWin.c  checkWin.h  main.c  player.c  player.h
